Implement new home screen

--- a/shops/index.html
+++ b/shops/index.html
@@ -11,6 +11,8 @@
         </div>
         <div class="shops-container">
             <!-- List of shops -->
+            Available fast foods in the area
+            
             <div id="shops-table" class="table-hover form-group">
             </div>
         </div>
