--- a/index.html
+++ b/index.html
@@ -16,12 +16,45 @@
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="/libs/slick/css/slick.min.css" rel="stylesheet">
+    <!--
+    <link href="/libs/slick/css/slick-theme.min.css" rel="stylesheet">
+-->
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <!-- Full screen for Safari under iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Custom styles for this template -->
     <link href="/css/global.min.css" rel="stylesheet">
     <style>
+        .intro {
+            padding: 2px;
+        }
+
+        .banner {
+            position: absolute;
+            background: url('/img/banner.png') 50% no-repeat;
+            background-size: contain;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        .banner div.message {
+            margin: 50% auto;
+            font-size: 18pt;
+            font-weight: bold;
+            padding: 10px;
+            background-color: rgba(255,255,255,0.6);
+            margin-left: 18px;
+            margin-right: 18px;
+            color: black;
+            text-align: center;
+            border-radius: 6px;
+            z-index: 1;
+        }
+
         .alert,
         .error_message,
         .shadow,
@@ -79,6 +112,11 @@
     <div class="shadow"></div>
     <div class="alert-area hidden">
     </div>
+    <div class="banner">
+        <div class="message">
+            Touch the screen to start
+        </div>
+    </div>
     <div class="container">
         <div class="pull-right dashboard">
             <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket"></span>
@@ -93,26 +131,20 @@
         <div class="intro" id="intro">
             <img src="/img/fastfood-worker-48-255355.png" class="pull-right">
             <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
-            <hr>
-            <p>Buy your meals from your preferred fast food and get it delivered as easy as 1-2-3:</p>
-            <ul>
-                <li>Select an item from the list and click
-                    <buton class="btn btn-xs btn-success">ORDER NOW</buton>
-                </li>
-                <li>Click on the <button class="btn btn-xs btn-danger">Basket</button> at the top of the page to checkout</li>
-                <li>Stay in touch with our delivery man through our chat application</li>
-                <li>Rub your belly, the food is coming</li>
-            </ul>
-            <div class="form-group">
-                <label for="areas">Select the area you want the orders to be delivered</label>
+            <div class="slider hidden">
+                <div><img src ""></div>
+            </div>
+            <div class="form-group areas-group hidden">
                 <select class="form-control areas">
                 </select>
             </div>
-            <p class="copyright">
-                The fast food brands and logos showed here are property of their respective companies.<br/>
-                <span class="iyabasira">iyabasira.online</span> (&copy;) 2017 - All rights reserved.
-            </p>
         </div>
+        <!--
+        <p class="copyright">
+            The fast food brands and logos shown here are property of their respective companies.<br/>
+            <span class="iyabasira">iyabasira.online</span> (&copy;) 2017 - All rights reserved.
+        </p>
+    -->
     </div>
 
     <!-- Bootstrap core JavaScript ================================================== -->
@@ -122,6 +154,7 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
+    <script src="/libs/slick/js/slick.min.js"></script>
     <script src="/libs/push/push.min.js"></script>
     <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
@@ -134,6 +167,7 @@
     <script>
         $(document).ready(function() {
             Push.Permission.request();
+            shop.load_shops_logos();
             common.init();
             common.get_config_value("Online");
             common.get_config_value("Debug");
@@ -145,7 +179,7 @@
                 $(".intro").addClass("hidden");
                 $("#content").removeClass("hidden");
             } else {
-                shop.load_dropdown("areas", true);
+                shop.load_dropdown("areas");
             }
             var show_map = cookies.getCookie("show_map");
             if (show_map) {
@@ -165,12 +199,13 @@
             e.preventDefault();
             intro = true;
             cookies.setCookie("chosen-area", $(this).val());
+            $(".banner").css("opacity", 0);
             //$("#content").load(HOME);
             $("#content").load('/shops');
             //$("#content").load("/thanks")
             $(".intro").addClass("hidden");
             $("#content").removeClass("hidden");
-
+            $(".copyright").addClass("hidden");
         });
 
         $("#basket_button").on("click", function(e) {
@@ -185,6 +220,13 @@
             $(".intro").addClass("hidden");
             $("#content").removeClass("hidden");
             location.href = "/chat";
+        })
+
+        $(".banner").on("touchstart click", function(e) {
+            e.preventDefault();
+            $(".areas").parent().removeClass("hidden");
+            $(".banner").css("opacity", ".2");
+            $(".slider").css("opacity", ".2");
         })
     </script>
 </body>
