--- a/splash.html
+++ b/splash.html
@@ -15,6 +15,8 @@
 <script>
     $(document).ready(function() {
         shop.load_dropdown("areas");
+        shop.init();
+        shop.updateBasket();
     })
     $(".areas").on("change", function(e) {
         e.preventDefault();
