Add switch needed for checkout

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="/libs/bootstrap/css/bootstrap-switch.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <!-- Full screen for Safari under iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -102,6 +103,7 @@
     <script src="/libs/jquery/js/jquery.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
     <script src="/libs/push/push.min.js"></script>
     <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
@@ -112,7 +114,7 @@
     <script src="/js/shop.min.js"></script>
 
     <script>
-    
+
         $(document).ready(function() {
             Push.Permission.request();
             common.init();
