--- a/splash.html
+++ b/splash.html
@@ -2,13 +2,9 @@
     .bootstrap-select .btn {
         background-color: #f9f9f9;
         border-style: solid;
-        border-left-width: 5px;
-        border-left-color: #5bc0de;
-        border-top: none;
-        border-bottom: none;
-        border-right: none;
+        border-color: #5bc0de;
+        border-left-width: 8px;
         color: #000;
-        font-weight: 200;
         padding: 12px 12px;
         font-size: 16px;
         font-weight: bold;
@@ -38,7 +34,7 @@
         shop.updateBasket();
         setTimeout(function() {
             $(".areas").parent().removeClass("hidden");
-        }, 3000);
+        }, 2000);
     })
 
     $(".areas").on("change", function(e) {
