--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
-    <script src="/libs/push/push.min.js"></script>
     <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
     <script src="/js/ajax.min.js"></script>
@@ -87,17 +86,18 @@
     <script src="/js/shop.min.js"></script>
 
     <script>
-
         $(document).ready(function() {
-            Push.Permission.request();
+            //Push.Permission.request();
             common.init();
             common.get_config_value("Online");
             common.get_config_value("Debug");
             chat.init();
             chat.check_messages();
             cookies.setCookie("sender", 2);
-            common.log("listCookies", cookies.listCookies());
             $("#content").load("/splash.html")
+            if (cookies.getCookie("order_status") == "3") {
+                location.href = "/feedback";
+            }
         });
 
         $("#basket_button").on("click", function(e) {
@@ -109,7 +109,6 @@
             e.preventDefault();
             location.href = "/chat";
         })
-
     </script>
 </body>
 
