Fix bugs by adding object name to functions (i.e.: common.showMsg)

--- a/admin/cities/index.html
+++ b/admin/cities/index.html
@@ -22,6 +22,12 @@
                     <input class="form-control" id="name" type="text" placeholder="Enter city name">
                 </div>
 
+                <!-- Name -->
+                <div class="form-group">
+                    <label for=code>Airport code:</label>
+                    <input class="form-control" id="code" size="3" type="text" placeholder="Enter aiport code (i.e.: PHC)">
+                </div>
+
                 <!-- Buttons -->
                 <div class="form-group">
                     <div class="alert alert-danger alert-dismissible" role="alert">
