--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="/libs/slick/css/slick.min.css" rel="stylesheet">
+    <link href="/libs/slick/css/slick-theme.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <!-- Full screen for Safari under iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -77,6 +79,7 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
+    <script src="/libs/slick/js/slick.min.js"></script>
     <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
     <script src="/js/ajax.min.js"></script>
