Make default dropdown empty

--- a/splash.html
+++ b/splash.html
@@ -31,7 +31,7 @@
 </div>
 <script>
     $(document).ready(function() {
-        shop.load_dropdown("areas");
+        shop.load_dropdown("areas", true);
         shop.init();
         shop.load_shops_logos();
         shop.updateBasket();
